CKA/Lab/collection100/healthpod54.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: health-pod
  name: health-pod
spec:
  containers:
  - image: nginx
    name: health-pod
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /healthz
        port: 80
      initialDelaySeconds: 300
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
