CKA/Lab/collection100/init-check78.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blue-check
spec:
  volumes:
  - name: blue-vol
    emptyDir: {}
  containers:
  - name: alpine
    image: alpine
    command: ['sh','-c','if [ -f /tech-folder/check.txt ]; then sleep 300; fi']
    volumeMounts:
    - name: blue-vol
      mountPath: /tech-folder
