CKA/Lab/collection100/multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mega
  name: multi-pod
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    name: mega
  - name: micro
    image: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
