CKA/Lab/collection100/multicontainerpod93.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
  name: multicontainer93
spec:
  containers:
  - image: nginx
    name: container-1
  - image: redis
    name: container-2
  - image: nginx
    name: container-3      
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
