CKA/Lab/collection100/pod35.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: c4c1f1c361e9fe8079e387e712430e06fd923d480c7998c43a2d6c0206576c64
    cni.projectcalico.org/podIP: 172.16.246.234/32
    cni.projectcalico.org/podIPs: 172.16.246.234/32
  creationTimestamp: "2024-01-25T11:01:16Z"
  labels:
    run: green
  name: green
  namespace: default
  resourceVersion: "2565284"
  uid: 3ac91a0b-17cb-4633-a3f9-c7305721143b
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: green
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-2tm46
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: workernode02
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-2tm46
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:01:16Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:01:18Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:01:18Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:01:16Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: cri-o://e3f26b9976aa279f2cb1a33ba7abdf7045633e5c2e95e4b9cf792c82691ebfd5
    image: docker.io/library/nginx:latest
    imageID: a8758716bb6aa4d90071160d27028fe4eaee7ce8166221a97d30440c8eac2be6
    lastState: {}
    name: green
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-01-25T11:01:18Z"
  hostIP: 100.79.46.14
  phase: Running
  podIP: 172.16.246.234
  podIPs:
  - ip: 172.16.246.234
  qosClass: BestEffort
  startTime: "2024-01-25T11:01:16Z"
