CKA/Lab/collection100/pod46.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: grey
  name: grey
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    name: grey
    securityContext:
      capabilities:
        add: ["SYS_TIME"]      
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
