CKA/Lab/collection100/secpod89.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sec-pod
  name: sec-pod
spec:
  securityContext:
    runAsUser: 2000
    fsGroup: 5000
  containers:
  - image: nginx
    name: sec-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
