CKA/Lab/collection100/yellow.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: f7831990b0f3f7498a43879cff0ea65a5ada4c6e96f97255a4d05e200d8ac0a0
    cni.projectcalico.org/podIP: 172.16.159.171/32
    cni.projectcalico.org/podIPs: 172.16.159.171/32
  creationTimestamp: "2024-01-25T11:07:07Z"
  labels:
    run: yellow
  name: yellow
  namespace: default
  resourceVersion: "2569015"
  uid: d5f250ee-48f0-4219-a2d7-91c5643efb75
spec:
  containers:
  - image: busybox
    imagePullPolicy: Always
    name: yellow
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-n2l67
      readOnly: true
    - mountPath: "/secret"
      name: yellow-secret
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: workernode06
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: yellow-secret
    secret:
      secretName: yellow-secret
  - name: kube-api-access-n2l67
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:07:07Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:07:12Z"
    message: 'containers with unready status: [yellow]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:07:12Z"
    message: 'containers with unready status: [yellow]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-01-25T11:07:07Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: cri-o://acc7d221b988d808b2871df7bc1a0493747183b73f1c96ecc405a5f79dc77bfb
    image: docker.io/library/busybox:latest
    imageID: 3f57d9401f8d42f986df300f0c69192fc41da28ccc8d797829467780db3dd741
    lastState:
      terminated:
        containerID: cri-o://acc7d221b988d808b2871df7bc1a0493747183b73f1c96ecc405a5f79dc77bfb
        exitCode: 0
        finishedAt: "2024-01-25T11:23:04Z"
        reason: Completed
        startedAt: "2024-01-25T11:23:04Z"
    name: yellow
    ready: false
    restartCount: 8
    started: false
    state:
      waiting:
        message: back-off 5m0s restarting failed container=yellow pod=yellow_default(d5f250ee-48f0-4219-a2d7-91c5643efb75)
        reason: CrashLoopBackOff
  hostIP: 100.83.234.5
  phase: Running
  podIP: 172.16.159.171
  podIPs:
  - ip: 172.16.159.171
  qosClass: BestEffort
  startTime: "2024-01-25T11:07:07Z"
