CKA/Lab/collection100/ingress22.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-connect
  namespace: host-dev
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 5678
