CKA/Lab/collection100/dev-tech-npolicy52.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dev-tech
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app: dev-tech
        podSelector:
          matchLabels:
            type: review
