CKA/Lab/collection100/network45.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: post
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: finance
    ports:
      - protocol: TCP
        port: 8080
  - to:
    - podSelector:
       matchLabels:
         name: data
    ports:
       - protocol: TCP
         port: 5432
