CKA/Lab/collection100/pod12.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tech-policy
  namespace: tech-deploy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from: 
      - namespaceSelector:
         matchLabels:
            app: tech-deploy
      ports:
        - protocol: TCP
          port: 80
          endPort: 32768
